--- a/www/apps/docs/content/development/api-routes/create.mdx
+++ b/www/apps/docs/content/development/api-routes/create.mdx
@@ -4,6 +4,8 @@ addHowToData: true
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
+import Details from "@theme/Details"
+import { DetailsSummary } from "docs-ui"
 
 # How to Create an API Route
 
@@ -539,7 +541,7 @@ After using `MedusaError`, the returned error in the response provides a clearer
 ```
 
 <Details>
-  <Summary>Available MedusaError Types and their respective status codes</Summary>
+  <DetailsSummary>Available MedusaError Types and their respective status codes</DetailsSummary>
 
   The default response code is `500` unless mentioned otherwise.
 
