--- a/www/apps/docs/content/experimental/pricing/install-nodejs.mdx
+++ b/www/apps/docs/content/experimental/pricing/install-nodejs.mdx
@@ -1,3 +1,6 @@
+import Details from "@theme/Details"
+import { DetailsSummary } from "docs-ui"
+
 # Install in Node.js-Based Application
 
 In this document, you’ll learn how to setup and use the Pricing module in a Node.js based application.
@@ -66,7 +69,7 @@ The first command runs the migrations, and the second command allows you to seed
 However, you’d need the following seed file added to the root of your project directory:
 
 <Details>
-  <Summary>Seed file</Summary>
+  <DetailsSummary>Seed file</DetailsSummary>
 
   ```js
   const currenciesData = [
