--- a/www/apps/docs/content/experimental/product/install-nodejs.mdx
+++ b/www/apps/docs/content/experimental/product/install-nodejs.mdx
@@ -1,3 +1,6 @@
+import Details from "@theme/Details"
+import { DetailsSummary } from "docs-ui"
+
 # Install in Node.js-Based Application
 
 In this document, you’ll learn how to setup and use the Product module in a Node.js based application.
@@ -65,7 +68,7 @@ The first command runs the migrations, and the second command allows you to seed
 However, you’d need the following seed file added to the root of your project directory:
 
 <Details>
-  <Summary>Seed File</Summary>
+  <DetailsSummary>Seed File</DetailsSummary>
 
     ```js
     const productCategoriesData = [
