--- a/www/apps/docs/content/modules/price-lists/admin/_import-prices.mdx
+++ b/www/apps/docs/content/modules/price-lists/admin/_import-prices.mdx
@@ -5,7 +5,8 @@ addHowToData: true
 
 import Tabs from '@theme/Tabs'
 import TabItem from '@theme/TabItem'
-import Details from "@site/src/theme/MDXProvider/Details"
+import Details from "@theme/Details"
+import { DetailsSummary } from "docs-ui"
 
 # How to Bulk Import Prices
 
@@ -41,7 +42,7 @@ Part of the process of importing prices is uploading a CSV file. This requires a
 You must have a CSV file that you will use to import prices into your Medusa backend. You can check [this CSV example file](https://medusa-doc-files.s3.amazonaws.com/price-list-import-template.csv) to see which format is required for your import.
 
 <Details>
-  <Summary>Expected columns</Summary>
+  <DetailsSummary>Expected columns</DetailsSummary>
 
   <table class="reference-table">
   <thead>
