--- a/www/apps/docs/content/modules/products/admin/import-products.mdx
+++ b/www/apps/docs/content/modules/products/admin/import-products.mdx
@@ -5,6 +5,9 @@ addHowToData: true
 
 import Tabs from '@theme/Tabs'
 import TabItem from '@theme/TabItem'
+import { DetailsSummary } from "docs-ui"
+
+import Details from "@theme/Details"
 
 # How to Bulk Import Products
 
@@ -40,7 +43,7 @@ The local file service can't be used for product import.
 You must have a CSV file that you will use to import products into your Medusa backend. You can check [this CSV example file](https://medusa-doc-files.s3.amazonaws.com/product-import-sales-channels.csv) to see which format is required for your import.
 
 <Details>
-  <Summary>Expected columns</Summary>
+  <DetailsSummary>Expected columns</DetailsSummary>
 
   #### Product columns
 
