--- a/www/apps/docs/content/plugins/notifications/sendgrid.mdx
+++ b/www/apps/docs/content/plugins/notifications/sendgrid.mdx
@@ -3,6 +3,9 @@ description: 'Learn how to integrate SendGrid with the Medusa backend. Learn how
 addHowToData: true
 ---
 
+import Details from "@theme/Details"
+import { DetailsSummary } from "docs-ui"
+
 # SendGrid
 
 In this document, you’ll learn about the [SendGrid plugin](https://github.com/medusajs/medusa/tree/master/packages/medusa-plugin-sendgrid), what it does, and how to use it.
@@ -86,7 +89,7 @@ You don’t have to create a template for every type in the reference. You can s
 **Description:** Template to be sent to the customer when they place a new order.
 
 <Details>
-  <Summary>Example Data</Summary>
+  <DetailsSummary>Example Data</DetailsSummary>
   
   ```json noReport
   {
@@ -314,7 +317,7 @@ You don’t have to create a template for every type in the reference. You can s
 **Description:** Template to be sent to a customer when their order is canceled.
 
 <Details>
-  <Summary>Example Data</Summary>
+  <DetailsSummary>Example Data</DetailsSummary>
 
   ```json noReport
   {
@@ -546,7 +549,7 @@ You don’t have to create a template for every type in the reference. You can s
 **Description:** Template to be sent to the customer when a shipment of their order has been created.
 
 <Details>
-  <Summary>Example Data</Summary>
+  <DetailsSummary>Example Data</DetailsSummary>
 
   ```json noReport
   {
@@ -829,7 +832,7 @@ You don’t have to create a template for every type in the reference. You can s
 **Description:** Template to be sent to the customer when a return request is made for an order.
 
 <Details>
-  <Summary>Example Data</Summary>
+  <DetailsSummary>Example Data</DetailsSummary>
 
   ```json noReport
   {
@@ -1272,7 +1275,7 @@ You don’t have to create a template for every type in the reference. You can s
 **Description:** Template to be sent to the customer when an order’s items have been returned.
 
 <Details>
-  <Summary>Example Data</Summary>
+  <DetailsSummary>Example Data</DetailsSummary>
 
   ```json noReport
   {
@@ -1715,7 +1718,7 @@ You don’t have to create a template for every type in the reference. You can s
 **Description:** Template to be sent to the customer when a Claim shipment has been created.
 
 <Details>
-  <Summary>Example Data</Summary>
+  <DetailsSummary>Example Data</DetailsSummary>
 
   ```json noReport
   {
@@ -2013,7 +2016,7 @@ You don’t have to create a template for every type in the reference. You can s
 **Description:** Template to be sent to the customer when a swap for an order has been created.
 
 <Details>
-  <Summary>Example Data</Summary>
+  <DetailsSummary>Example Data</DetailsSummary>
 
   ```json noReport
   {
@@ -2523,7 +2526,7 @@ You don’t have to create a template for every type in the reference. You can s
 **Description:** Template to be sent to the customer when a shipment of a swap of an order has been created.
 
 <Details>
-  <Summary>Example Data</Summary>
+  <DetailsSummary>Example Data</DetailsSummary>
 
   ```json noReport
   Object {
@@ -3104,7 +3107,7 @@ You don’t have to create a template for every type in the reference. You can s
 **Description:** Template to be sent to the customer when a swap of an order has been received.
 
 <Details>
-  <Summary>Example Data</Summary>
+  <DetailsSummary>Example Data</DetailsSummary>
 
   ```json noReport
   {
@@ -3615,7 +3618,7 @@ You don’t have to create a template for every type in the reference. You can s
 **Description:** Template to be to the customer sent when a gift card in their order has been created.
 
 <Details>
-  <Summary>Example Data</Summary>
+  <DetailsSummary>Example Data</DetailsSummary>
 
   ```json noReport
   Object {
@@ -3784,7 +3787,7 @@ You don’t have to create a template for every type in the reference. You can s
 **Description:** Template to be sent to the customer when they request a password reset.
 
 <Details>
-  <Summary>Example Data</Summary>
+  <DetailsSummary>Example Data</DetailsSummary>
 
   ```json noReport
   Object {
@@ -3805,7 +3808,7 @@ You don’t have to create a template for every type in the reference. You can s
 **Description:** Template to be sent to the admin user when they request a password reset.
 
 <Details>
-  <Summary>Example Data</Summary>
+  <DetailsSummary>Example Data</DetailsSummary>
 
   ```json noReport
   Object {
@@ -3823,7 +3826,7 @@ You don’t have to create a template for every type in the reference. You can s
 **Description:** Template to be sent to admin users when a product has hit the restock quantity threshold.
 
 <Details>
-  <Summary>Example Data</Summary>
+  <DetailsSummary>Example Data</DetailsSummary>
 
   ```json noReport
   Object {
