--- a/www/apps/docs/content/recipes/pos.mdx
+++ b/www/apps/docs/content/recipes/pos.mdx
@@ -2,8 +2,11 @@
 addHowToData: true
 ---
 
+
+import Details from "@theme/Details"
 import DocCardList from '@theme/DocCardList';
 import Icons from '@theme/Icon';
+import { DetailsSummary } from "docs-ui"
 
 # POS
 
@@ -95,7 +98,7 @@ To search through product variants by their barcode, you can create a custom API
 ]} />
 
 <Details>
-  <Summary>Example: Search Products By Barcode API Route</Summary>
+  <DetailsSummary>Example: Search Products By Barcode API Route</DetailsSummary>
 
   Here’s an example of creating a custom API Route at `/store/pos/search-barcode` that searches product variants by a barcode:
 
