--- a/www/apps/docs/content/create-medusa-app.mdx
+++ b/www/apps/docs/content/create-medusa-app.mdx
@@ -3,6 +3,8 @@ description: 'Learn how to create a composable commerce platform using Medusa. T
 addHowToData: true
 ---
 
+
+import Details from "@theme/Details"
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import Feedback from '@site/src/components/Feedback';
@@ -17,6 +19,7 @@ import FreshInstallationSection from './troubleshooting/awilix-resolution-error/
 import EaddrinuseSection from './troubleshooting/eaddrinuse.md'
 import InvalidTokenError from './troubleshooting/create-medusa-app-errors/_no-browser-token-error.md'
 import PostgresDockerError from './troubleshooting/database-errors/_docker.md'
+import { DetailsSummary } from "docs-ui"
 
 # Install Medusa with create-medusa-app
 
@@ -65,7 +68,7 @@ In your terminal, run the following command:
 </Tabs>
 
 <Details>
-  <Summary>Command Options</Summary>
+  <DetailsSummary>Command Options</DetailsSummary>
   
   The `create-medusa-app` command can accept the following options:
 
@@ -81,7 +84,7 @@ In your terminal, run the following command:
 </Details>
 
 <Details className="border-t-0">
-  <Summary>Example: Connect to a Vercel PostgreSQL Database</Summary>
+  <DetailsSummary>Example: Connect to a Vercel PostgreSQL Database</DetailsSummary>
 
   If you want to use a PostgreSQL database hosted on Vercel, you must use the `--db-url` option and add to the end of your connection URL `?sslmode=require`. For example:
 
@@ -97,7 +100,7 @@ In your terminal, run the following command:
 </Details>
 
 <Details className="border-t-0">
-  <Summary>Example: Connect to a Supabase Database</Summary>
+  <DetailsSummary>Example: Connect to a Supabase Database</DetailsSummary>
 
   If you want to connect to a Supabase database, you must use the `--db-url` option with its value beign the connection URL to your Supabase database. For example:
 
