--- a/www/apps/docs/content/modules/users/backend/rbac.mdx
+++ b/www/apps/docs/content/modules/users/backend/rbac.mdx
@@ -6,6 +6,9 @@ import DocCardList from '@theme/DocCardList';
 import DocCard from '@theme/DocCard';
 import Icons from '@theme/Icon';
 
+import Details from "@theme/Details"
+import { DetailsSummary } from "docs-ui"
+
 # Implement Role-Based Access Control (RBAC)
 
 In this document, you'll get a high-level overview of how you can implement role-based access control (RBAC) in your Medusa backend.
@@ -48,7 +51,7 @@ So, the first step would be to create the `Role` and `Permission` entities to re
 ]} />
 
 <Details>
-  <Summary>Example Implementation</Summary>
+  <DetailsSummary>Example Implementation</DetailsSummary>
 
   This is an example implementation of how you can create the Role and Permission entities, and extend the `User` and `Store` entities.
 
@@ -346,7 +349,7 @@ Since the Medusa backend uses Express, you can create a middleware and attach it
 }} />
 
 <Details>
-  <Summary>Example Implementation</Summary>
+  <DetailsSummary>Example Implementation</DetailsSummary>
 
   In this example, you’ll create a middleware that runs on all admin-authenticated routes and checks the logged-in user’s permissions before giving them access to an API Route.
 
@@ -480,7 +483,7 @@ Furthermore, you may need to extend core services if you need to perform actions
 ]} />
 
 <Details>
-  <Summary>Example Implementation</Summary>
+  <DetailsSummary>Example Implementation</DetailsSummary>
 
   In this example, you’ll only implement two API Routes for simplicity: create role API Route that create a new role with permissions, and associate user API Route that associates a user with a role.
 
