--- a/www/apps/docs/content/recipes/commerce-automation.mdx
+++ b/www/apps/docs/content/recipes/commerce-automation.mdx
@@ -2,9 +2,12 @@
 addHowToData: true
 ---
 
+
+import Details from "@theme/Details"
 import DocCardList from '@theme/DocCardList';
 import DocCard from '@theme/DocCard';
 import Icons from '@theme/Icon';
+import { DetailsSummary } from "docs-ui"
 
 # Commerce automation
 
@@ -101,7 +104,7 @@ Medusa also provides official notification plugins that integrate with third-par
 ]} />
 
 <Details>
-  <Summary>Example: Sending an email for new notes</Summary>
+  <DetailsSummary>Example: Sending an email for new notes</DetailsSummary>
 
   Here’s an example of a subscriber that uses the SendGrid plugin to send an email to the customer when the order has a new note:
 
@@ -186,7 +189,7 @@ You can implement automatic synchronization in Medusa using scheduled jobs. A sc
 }} />
 
 <Details>
-  <Summary>Example: Synchronizing products with a third-party service</Summary>
+  <DetailsSummary>Example: Synchronizing products with a third-party service</DetailsSummary>
 
   Here’s an example of synchronizing products with a third party service using a [loader](../development/loaders/create.md):
 
@@ -405,7 +408,7 @@ For example, if you're grouping customers with over twenty orders, you can use a
 ]} />
 
 <Details>
-  <Summary>Example: Add customer to VIP group</Summary>
+  <DetailsSummary>Example: Add customer to VIP group</DetailsSummary>
 
   Here’s an example of a subscriber that listens to the `order.placed` event and checks if the customer should be added to the VIP customer group based on their number of orders:
 
@@ -516,7 +519,7 @@ You can alternatively have a Scheduled Job that checks if the number of new prod
 ]} />
 
 <Details>
-  <Summary>Example: Sending a newsletter email after adding ten products</Summary>
+  <DetailsSummary>Example: Sending a newsletter email after adding ten products</DetailsSummary>
 
   Here’s an example of listening to the `product.created` event in a subscriber and send a newsletter if the condition is met:
 
