--- a/www/apps/docs/content/upgrade-guides/medusa-core/1-19.mdx
+++ b/www/apps/docs/content/upgrade-guides/medusa-core/1-19.mdx
@@ -24,7 +24,7 @@ Version 1.19 of Medusa ships performance improvements, bug fixes, and some break
 
 In previous versions, if you attempt to complete a cart that's already completed, you will receive a response with status code`409`, indicating a conflict.
 
-In v1.19 of the Medusa backend, the order or swap associated with the completed cart is returned instead, with no response error:
+In v1.19 of the Medusa backend, the order or swap associated with the completed cart is returned instead with status code 200:
 
 ```
 // completing a regular cart
